[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scenes/ArrowElement/ArrowElement.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/AudioStreamConductor/AudioStreamConductor.tscn" type="PackedScene" id=2]
[ext_resource path="res://Assets/Original/Music/Ritual_-_Marketplace_Music_Demo.mp3" type="AudioStream" id=3]
[ext_resource path="res://Scenes/BeatControl/BeatControl.gd" type="Script" id=4]

[node name="BeatControl" type="Node2D"]
script = ExtResource( 4 )
sequence = [ 1, 2, 3, 4, 3, 4, 0, 0, 1, 1, 0, 0 ]

[node name="AudioStreamConductor" parent="." instance=ExtResource( 2 )]
stream = ExtResource( 3 )
bus = "Music"
beats_per_minute = 120
beats_per_measure = 2

[node name="GuardBeats" type="Node2D" parent="."]
position = Vector2( 263, 204 )
__meta__ = {
"_edit_group_": true
}

[node name="DownArrow" parent="GuardBeats" instance=ExtResource( 1 )]

[node name="UpArrow" parent="GuardBeats" instance=ExtResource( 1 )]
flip_v = true

[node name="RightArrow" parent="GuardBeats" instance=ExtResource( 1 )]
rotation = -1.5708

[node name="LeftArrow" parent="GuardBeats" instance=ExtResource( 1 )]
rotation = 1.5708

[node name="PlayerBeats" type="Node2D" parent="."]
position = Vector2( 675, 204 )
__meta__ = {
"_edit_group_": true
}

[node name="DownArrow" parent="PlayerBeats" instance=ExtResource( 1 )]

[node name="UpArrow" parent="PlayerBeats" instance=ExtResource( 1 )]
flip_v = true

[node name="RightArrow" parent="PlayerBeats" instance=ExtResource( 1 )]
rotation = -1.5708

[node name="LeftArrow" parent="PlayerBeats" instance=ExtResource( 1 )]
rotation = 1.5708

[connection signal="beat" from="AudioStreamConductor" to="." method="_on_AudioStreamConductor_beat"]
